--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,23 @@
-.App {
+body {
+  background-color: white;
+  max-width: 1280px;
+  color: black;
+  margin: auto;
+  box-sizing: border-box;
+  text-rendering: optimizeLegibility;
+}
+
+.page {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  margin: 0;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +54,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
