--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import url(./vendor/normalize.css);
+
+@import url(./vendor/fonts/font.css);
+
+@import url(./components/Header/header.css);
+
+@import url(./components/Main/main.css);
+
+
+
+
+/* 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +22,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
