--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,4 +1,5 @@
 @import url(./Promo/promo.css);
+@import url(./NavTab/nav-tab.css);
 
 .main {
   width: 100%;
@@ -6,4 +7,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
