--- a/src/components/Main/Promo/__title/promo__title.css
+++ b/src/components/Main/Promo/__title/promo__title.css
@@ -4,6 +4,7 @@
   font-family: 'Inter', Arial, sans-serif;
   font-size: 50px;
   line-height: 1.16;
+  font-weight: normal;
 
 
   position: absolute;
