--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,5 +1,7 @@
 @import url(./Promo/promo.css);
 @import url(./NavTab/nav-tab.css);
+@import url(./AboutProject/about-project.css);
+@import url(./Techs/techs.css);
 
 .main {
   width: 100%;
