--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -2,6 +2,7 @@
 @import url(./NavTab/nav-tab.css);
 @import url(./AboutProject/about-project.css);
 @import url(./Techs/techs.css);
+@import url(./AboutMe/about-me.css);
 
 .main {
   width: 100%;
