--- a/src/styles/link.css
+++ b/src/styles/link.css
@@ -12,8 +12,15 @@
 
 .link_header {
   text-decoration: none;
+  font-size: 12px;
 }
 
 .link_nav-tab {
-  margin-right: 40px;
+  font-size: 13px;
+}
+
+.link_about-me {
+  color: black;
+  text-decoration: none;
+  font-size: 14px;
 }
