--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -1,9 +1,10 @@
-.about-project__title {
-  margin: 0;
-
+.title {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: normal;
   font-size: 22px;
   line-height: auto;
-  
+
+  width: 100%;
+
+  margin: 0;
 }
