--- a/src/styles/link.css
+++ b/src/styles/link.css
@@ -24,3 +24,14 @@
   text-decoration: none;
   font-size: 14px;
 }
+
+.link_portfolio {
+  color: black;
+  text-decoration: none;
+  font-size: 30px;
+  line-height: 1.66;
+}
+
+.link_portfolio-arrow {
+  transform: rotate(315deg);
+}
