--- a/src/components/Main/AboutMe/__photo/about-me__photo.css
+++ b/src/components/Main/AboutMe/__photo/about-me__photo.css
@@ -5,4 +5,12 @@
   width: 270px;
   height: 327px;
   border-radius: 10px;
+
+  transition: .3s;
+}
+
+.about-me__photo:hover {
+  transform: scale(1.3, 1.3);
+  box-shadow: 3px 3px 8px grey, -3px -3px 8px grey;
+  transition: .3s;
 }
