--- a/src/components/Movies/movies.css
+++ b/src/components/Movies/movies.css
@@ -3,3 +3,4 @@
 @import url(./MoviesCardList/movies-card-list.css);
 @import url(./Preloader/Preloader.css);
 @import url(./SearchForm/search-form.css);
+@import url(./MoreFilmsButton/more-films-button.css);
