--- a/src/components/Movies/FilterCheckbox/__input/filter-checkbox__input.css
+++ b/src/components/Movies/FilterCheckbox/__input/filter-checkbox__input.css
@@ -5,8 +5,6 @@
   width: 38px;
   height: 20px;
 
-  cursor: pointer;
-
   background-color: #EBEBEB;
 
   border-radius: 20px;;
@@ -18,8 +16,9 @@
   transition: .3s;
 }
 
-.filter-checkbox__input:hover {
+.filter-checkbox__input:hover:not(:disabled) {
   box-shadow: 2px 2px 6px #2BE080, -2px -2px 6px #2BE080;
+  cursor: pointer;
 }
 
 .filter-checkbox__input::after {
@@ -52,5 +51,5 @@
 }
 
 .filter-checkbox__input:disabled:not(:checked)::after {
-  opacity: .6;
+  opacity: .3;
 }
