--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 @import url(./components/Header/header.css);
 
+@import url(./components/Header/_logged-in/header_logged-in.css);
+
 @import url(./components/Main/main.css);
 
 @import url(./components/Movies/movies.css);
