сверстана страница профиль

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
 
 @import url(./components/Movies/movies.css);
 
+@import url(./components/Profile/profile.css);
+
 @import url(./components/Footer/footer.css);
 
 @import url(./styles/styles.css);
