сверстаны страницы входа и регистрации

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
 
 @import url(./components/Footer/footer.css);
 
+@import url(./components/AuthForm/auth-form.css);
+
+@import url(./components/SignIn/sign-in-page.css);
+
 @import url(./components/PageNotFound/page-not-found.css);
 
 @import url(./styles/styles.css);
