--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,7 @@ body {
 .page {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-direction: column;
