--- a/src/components/Main/Promo/__title/promo__title.css
+++ b/src/components/Main/Promo/__title/promo__title.css
@@ -1,4 +1,4 @@
-.promo__title {
+/* .promo__title {
   color: white;
 
   font-family: 'Inter', Arial, sans-serif;
@@ -14,4 +14,17 @@
   max-width: 730px;
 
   text-align: center;
+} */
+
+.promo__title {
+  color: white;
+
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 50px;
+  line-height: 1.16;
+  font-weight: normal;
+
+  text-align: center;
+
+  max-width: 730px;
 }
