адаптив главной страницы

--- a/src/components/Main/AboutMe/__profile/about-me__profile.css
+++ b/src/components/Main/AboutMe/__profile/about-me__profile.css
@@ -4,3 +4,13 @@
 
   margin-top: 66px;
 }
+
+@media screen and (max-width: 600px) {
+  .about-me__profile {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 30px;
+  }
+}
