--- a/src/components/Main/Techs/__icon-text/techs__icon-text.css
+++ b/src/components/Main/Techs/__icon-text/techs__icon-text.css
@@ -4,3 +4,9 @@
   font-size: 14px;
   line-height: auto;
 }
+
+@media screen and (max-width: 768px) {
+  .techs__icon-text {
+    font-size: 12px;
+  }
+}
