--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -14,3 +14,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media screen and (max-width: 500px) {
+  .footer {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
