--- a/src/components/Main/AboutMe/__photo/about-me__photo.css
+++ b/src/components/Main/AboutMe/__photo/about-me__photo.css
@@ -6,11 +6,71 @@
   height: 327px;
   border-radius: 10px;
 
+  min-width: 255px;
+  min-height: 307px;
+
   transition: .3s;
+
+  margin-left: 49px;
 }
 
 .about-me__photo:hover {
   transform: scale(1.3, 1.3);
   box-shadow: 3px 3px 8px grey, -3px -3px 8px grey;
   transition: .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .about-me__photo {
+    width: 255px;
+    height: 307px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-me__photo {
+    margin: 0 0 30px 0;
+    padding: 0;
+    width: 100%;
+    height: 600px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .about-me__photo {
+    height: 550px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .about-me__photo {
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .about-me__photo {
+    height: 450px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .about-me__photo {
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .about-me__photo {
+    height: 350px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .about-me__photo {
+    width: 292px;
+    height: 352px;
+    margin: 0;
+    padding: 0;
+  }
 }
