--- a/src/components/Main/AboutMe/about-me.css
+++ b/src/components/Main/AboutMe/about-me.css
@@ -11,3 +11,16 @@
   box-sizing: border-box;
   padding: 110px 70px 0 70px;
 }
+
+@media screen and (mqx-width: 768px) {
+  .about-me {
+    padding: 110px 50px 0 50px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .about-me {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
