--- a/src/components/Main/AboutProject/__description-container/about-project__description-container.css
+++ b/src/components/Main/AboutProject/__description-container/about-project__description-container.css
@@ -4,3 +4,11 @@
 
   margin-top: 70px;
 }
+
+@media screen and (max-width: 500px) {
+  .about-project__description-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
