--- a/src/components/Main/Portfolio/portfolio.css
+++ b/src/components/Main/Portfolio/portfolio.css
@@ -13,3 +13,10 @@
 
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 500px) {
+  .portfolio {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
