--- a/src/components/Main/Promo/__title/promo__title.css
+++ b/src/components/Main/Promo/__title/promo__title.css
@@ -1,21 +1,3 @@
-/* .promo__title {
-  color: white;
-
-  font-family: 'Inter', Arial, sans-serif;
-  font-size: 50px;
-  line-height: 1.16;
-  font-weight: normal;
-
-
-  position: absolute;
-  top: 135px;
-  left: 275px;
-
-  max-width: 730px;
-
-  text-align: center;
-} */
-
 .promo__title {
   color: white;
 
@@ -27,4 +9,10 @@
   text-align: center;
 
   max-width: 730px;
+}
+
+@media screen and (max-width: 420px) {
+  .promo__title {
+    font-size: 31px;
+  }
 }
