--- a/src/components/Main/Techs/techs.css
+++ b/src/components/Main/Techs/techs.css
@@ -17,3 +17,10 @@
 
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 500px) {
+  .techs {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
