--- a/src/components/Header/__profile/header__profile.css
+++ b/src/components/Header/__profile/header__profile.css
@@ -5,3 +5,10 @@
 
   margin-left: 50px;
 }
+
+@media screen and (max-width: 768px) {
+  .header__profile {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
