--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,4 +1,6 @@
 @import url(./__auth/header__auth.css);
+@import url(./__burger/header__burger.css);
+@import url(./__burger-stripe/header__burger-stripe.css);
 @import url(./__films/header__films.css);
 @import url(./__link/header__link.css);
 @import url(./__link/_active/header__link_active.css);
