--- a/src/components/Movies/MoviesCard/__photo/movies-card__photo.css
+++ b/src/components/Movies/MoviesCard/__photo/movies-card__photo.css
@@ -5,3 +5,111 @@
   background-image: url(../../../../images/moviesCard.jpg);
   background-size: cover;
 }
+
+@media screen and (max-width: 1279px) {
+  .movies-card__photo {
+    height: 180px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .movies-card__photo {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .movies-card__photo {
+    height: 190px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .movies-card__photo {
+    height: 185px;
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .movies-card__photo {
+    height: 170px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .movies-card__photo {
+    height: 160px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .movies-card__photo {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .movies-card__photo {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .movies-card__photo {
+    height: 270px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .movies-card__photo {
+    height: 240px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .movies-card__photo {
+    height: 230px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .movies-card__photo {
+    height: 220px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .movies-card__photo {
+    height: 210px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .movies-card__photo {
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .movies-card__photo {
+    height: 190px;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .movies-card__photo {
+    height: 180px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .movies-card__photo {
+    height: 170px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .movies-card__photo {
+    height: 168px;
+  }
+}
