--- a/src/components/Movies/MoviesCard/movies-card.css
+++ b/src/components/Movies/MoviesCard/movies-card.css
@@ -12,3 +12,201 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 1279px) {
+  .movies-card {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .movies-card {
+    width: 280px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .movies-card {
+    width: 260px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .movies-card {
+    width: 240px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .movies-card {
+    width: 220px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .movies-card {
+    width: 339px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .movies-card {
+    width: 320px;
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .movies-card {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .movies-card {
+    width: 290px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .movies-card {
+    width: 280px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .movies-card {
+    width: 270px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .movies-card {
+    width: 260px;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .movies-card {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .movies-card {
+    width: 240px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .movies-card {
+    width: 230px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .movies-card {
+    width: 450px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .movies-card {
+    width: 440px;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .movies-card {
+    width: 430px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .movies-card {
+    width: 420px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .movies-card {
+    width: 410px;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .movies-card {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .movies-card {
+    width: 395px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .movies-card {
+    width: 390px;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .movies-card {
+    width: 385px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .movies-card {
+    width: 380px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .movies-card {
+    width: 370px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .movies-card {
+    width: 360px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .movies-card {
+    width: 350px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .movies-card {
+    width: 340px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .movies-card {
+    width: 330px;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .movies-card {
+    width: 320px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .movies-card {
+    width: 310px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .movies-card {
+    width: 300px;
+  }
+}
