--- a/src/components/Movies/MoviesCardList/movies-card-list.css
+++ b/src/components/Movies/MoviesCardList/movies-card-list.css
@@ -13,3 +13,41 @@
   grid-column-gap: 20px;
   grid-row-gap: 38px;
 }
+
+@media screen and (max-width: 1279px) {
+  .movies-card-list {
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 17px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .movies-card-list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .movies-card-list {
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .movies-card-list {
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .movies-card-list {
+    padding: 0 10px;
+  }
+}
