--- a/src/components/Movies/FilterCheckbox/filter-checkbox.css
+++ b/src/components/Movies/FilterCheckbox/filter-checkbox.css
@@ -10,3 +10,9 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 550px) {
+  .filter-checkbox {
+    margin-top: 45px;
+  }
+}
