--- a/src/components/Movies/SearchForm/search-form.css
+++ b/src/components/Movies/SearchForm/search-form.css
@@ -15,3 +15,22 @@
 
   padding: 0 70px;
 }
+
+@media screen and (max-width: 700px) {
+  .search-form {
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .search-form {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .search-form {
+    flex-direction: column;
+    align-items: center;
+  }
+}
