сделан адаптив всех страниц

--- a/src/components/Profile/__edit-button/profile__edit-button.css
+++ b/src/components/Profile/__edit-button/profile__edit-button.css
@@ -12,3 +12,9 @@
 .profile__edit-button:hover {
   cursor: pointer;
 }
+
+@media screen and (max-width: 500px) {
+  .profile__edit-button {
+    margin-top: 120px;
+  }
+}
