--- a/src/components/Profile/__form/profile__form.css
+++ b/src/components/Profile/__form/profile__form.css
@@ -10,3 +10,15 @@
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 500px) {
+  .profile__form {
+    width: 350px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .profile__form {
+    width: 300px;
+  }
+}
