--- a/src/components/Movies/movies.css
+++ b/src/components/Movies/movies.css
@@ -1,7 +1,7 @@
 @import url(./FilterCheckbox/filter-checkbox.css);
 @import url(./MoviesCard/movies-card.css);
 @import url(./MoviesCardList/movies-card-list.css);
-@import url(./Preloader/Preloader.css);
+@import url(./Preloader/preloader.css);
 @import url(./SearchForm/search-form.css);
 @import url(./MoreFilmsButton/more-films-button.css);
 
