добавлена ночная тема, сверстан блок О проекте в черном цвете

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,5 @@
 body {
-  background-color: white;
   max-width: 1280px;
-  color: black;
   margin: auto;
   box-sizing: border-box;
   text-rendering: optimizeLegibility;
@@ -16,43 +14,9 @@ body {
   flex-direction: column;
 
   margin: 0;
-}
 
-/* .App {
-  text-align: center;
-}
+  color: black;
+  background-color: white;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  transition: .5s;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
