сверстан блок Технологии в черном цвете

--- a/src/components/Main/Techs/techs.css
+++ b/src/components/Main/Techs/techs.css
@@ -1,6 +1,7 @@
 @import url(./__description/techs__description.css);
 @import url(./__icon-text/techs__icon-text.css);
 @import url(./__icon/techs__icon.css);
+@import url(./__icon/_black/techs__icon_black.css);
 @import url(./__icons/techs__icons.css);
 @import url(./__number/techs__number.css);
 
