--- a/src/components/Main/Promo/promo.css
+++ b/src/components/Main/Promo/promo.css
@@ -7,15 +7,21 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 
-  background: center no-repeat;
-  background-image: url(../../../images/promo.svg);
+  background: bottom 60px right 70px no-repeat;
+  background-image: url(../../../images/new-promo.svg);
   background-color: #073042;
 
   /* background: center no-repeat url(../../../images/promo.svg); */
 
-  padding-top: 184px;
-  padding-bottom: 224px;
+  /* padding-top: 184px;
+  padding-bottom: 224px; */
+}
+
+@media screen and (max-width: 768px) {
+  .promo {
+    background-position: 25% 85%;
+    align-items: center;
+  }
 }
