--- a/src/components/Main/Promo/__title/promo__title.css
+++ b/src/components/Main/Promo/__title/promo__title.css
@@ -2,13 +2,25 @@
   color: white;
 
   font-family: 'Inter', Arial, sans-serif;
-  font-size: 50px;
-  line-height: 1.16;
+  font-size: 40px;
+  line-height: 1.3;
   font-weight: normal;
 
-  text-align: center;
+  text-align: left;
 
   max-width: 730px;
+
+  margin: 0;
+  padding-left: 70px;
+  padding-bottom: 406px;
+  padding-top: 50px;
+}
+
+@media screen and (max-width: 768px) {
+  .promo__title {
+    text-align: center;
+    padding: 300px 0 440px 0;
+  }
 }
 
 @media screen and (max-width: 420px) {
