--- a/src/components/Movies/MoviesCard/__time/movies-card__time.css
+++ b/src/components/Movies/MoviesCard/__time/movies-card__time.css
@@ -1,8 +1,9 @@
 .movies-card__time {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: normal;
-  font-size: 11px;
-  color: #A0A0A0;
+  font-size: 13px;
+  line-height: 1.38;
+  color: #8B8B8B;
 
   margin: 6px 0 0 0;
   padding: 0;
