--- a/src/components/Movies/SearchForm/__fieldset/search-form__fieldset.css
+++ b/src/components/Movies/SearchForm/__fieldset/search-form__fieldset.css
@@ -1,6 +1,6 @@
 .search-form__fieldset {
-  border: solid 1px #E8E8E8;
-  border-radius: 48px;;
+  border: none;
+  border-radius: 9px;;
 
   width: 100%;
   height: 48px;
@@ -10,5 +10,5 @@
   align-items: center;
 
   margin: 0;
-  padding: 6px 12px;
+  padding: 0 30px;
 }
