сверстана черная страница 404

--- a/src/components/PageNotFound/__back/page-not-found__back.css
+++ b/src/components/PageNotFound/__back/page-not-found__back.css
@@ -2,7 +2,7 @@
   font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
-  color: #3456F3;
+  color: #4285F4;
 
   border: none;
   background-color: #fff;
@@ -10,4 +10,8 @@
   margin-top: 184px;
 
   cursor: pointer;
+}
+
+.page-not-found__back_black {
+  background-color: #202020;
 }
