--- a/src/components/Movies/SearchForm/search-form.css
+++ b/src/components/Movies/SearchForm/search-form.css
@@ -24,6 +24,36 @@
   border-radius: 9px;
 }
 
+@media screen and (max-width: 1140px) {
+  .search-form {
+    max-width: 1000px;
+  }
+}
+
+@media screen and (max-width: 1040px) {
+  .search-form {
+    max-width: 900px;
+  }
+}
+
+@media screen and (max-width: 940px) {
+  .search-form {
+    max-width: 800px;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .search-form {
+    max-width: 700px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .search-form {
+    max-width: 708px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .search-form {
     padding: 0 30px;
