--- a/src/components/Profile/__title/profile__title.css
+++ b/src/components/Profile/__title/profile__title.css
@@ -2,7 +2,7 @@
   font-family: 'Inter', Arial, sans-serif;
   font-size: 24px;
   font-weight: normal;
-  color: black;
+  /* color: black; */
 
   margin: 0;
   padding: 0;
