--- a/src/components/AuthForm/__label/auth-form__label.css
+++ b/src/components/AuthForm/__label/auth-form__label.css
@@ -3,8 +3,10 @@
   font-weight: normal;
   font-size: 10px;
   color: #A0A0A0;
+
+  margin-top: 20px;
 }
 
-.auth-form__label:last-of-type {
+.auth-form__label:first-child {
   margin-top: 20px;
 }
