--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -21,6 +21,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 600px) {
