--- a/src/components/Movies/FilterCheckbox/__label/filter-checkbox__label.css
+++ b/src/components/Movies/FilterCheckbox/__label/filter-checkbox__label.css
@@ -3,3 +3,9 @@
   font-size: 13px;
   line-height: 1.38;
 }
+
+@media screen and (max-width: 550px) {
+  .filter-checkbox__label {
+    margin-left: 13px;
+  }
+}
