--- a/src/components/Movies/MoviesCard/__like/movies-card__like.css
+++ b/src/components/Movies/MoviesCard/__like/movies-card__like.css
@@ -22,6 +22,7 @@
   transform: scale(1.3, 1.3);
   border: solid 1px #3DDC84;
   transition: .2s;
+  cursor: pointer;
 }
 
 .movies-card__like_active {
