--- a/src/components/Movies/MoviesCard/movies-card.css
+++ b/src/components/Movies/MoviesCard/movies-card.css
@@ -15,6 +15,13 @@
 
   background-color: #222222;
   border-radius: 6px;
+
+  transition: .2s;
+}
+
+.movies-card:hover {
+  box-shadow: 3px 3px 15px #2BE080, -3px -3px 15px #2BE080;
+  transition: .2s;
 }
 
 @media screen and (max-width: 1279px) {
@@ -35,15 +42,39 @@
   }
 }
 
+@media screen and (max-width: 950px) {
+  .movies-card {
+    width: 250px;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .movies-card {
     width: 240px;
   }
 }
 
+@media screen and (max-width: 875px) {
+  .movies-card {
+    width: 230px;
+  }
+}
+
 @media screen and (max-width: 850px) {
   .movies-card {
     width: 220px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .movies-card {
+    width: 210px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .movies-card {
+    width: 345px;
   }
 }
 
