--- a/src/components/Movies/SearchForm/__borderline/search-form__borderline.css
+++ b/src/components/Movies/SearchForm/__borderline/search-form__borderline.css
@@ -2,3 +2,10 @@
   border-left: solid 1px #424242;
   height: 40px;
 }
+
+@media screen and (max-width: 550px) {
+  .search-form__borderline {
+    border: none;
+    height: 0;
+  }
+}
