--- a/src/components/Movies/SearchForm/__fieldset/search-form__fieldset.css
+++ b/src/components/Movies/SearchForm/__fieldset/search-form__fieldset.css
@@ -7,8 +7,15 @@
 
   display: flex;
   justify-content: space-between;
-  align-items: center;
 
   margin: 0;
   padding: 0 30px;
+}
+
+@media screen and (max-width: 550px) {
+  .search-form__fieldset {
+    background-color: #2F2F2F;
+    height: 72px;
+    width: calc(100% - 20px);
+  }
 }
