--- a/src/components/Movies/SearchForm/search-form.css
+++ b/src/components/Movies/SearchForm/search-form.css
@@ -5,10 +5,13 @@
 @import url(./__submit/search-form__submit.css);
 
 .search-form {
-  width: 100%;
-  max-width: 1140px;
+  max-width: 100%;
+  min-width: calc(100% - 140px);
+  /* max-width: 1140px; */
 
-  height: 70px;
+  min-height: 70px;
+
+
 
   margin-top: 80px;
 
@@ -18,57 +21,24 @@
 
   box-sizing: border-box;
 
-  padding: 0 30px 0 0;
+  padding: 0;
 
   background-color: #2F2F2F;
   border-radius: 9px;
 }
 
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 800px) {
   .search-form {
-    max-width: 1000px;
-  }
-}
-
-@media screen and (max-width: 1040px) {
-  .search-form {
-    max-width: 900px;
-  }
-}
-
-@media screen and (max-width: 940px) {
-  .search-form {
-    max-width: 800px;
-  }
-}
-
-@media screen and (max-width: 840px) {
-  .search-form {
-    max-width: 700px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .search-form {
-    max-width: 708px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .search-form {
-    padding: 0 30px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .search-form {
-    padding: 0 20px;
+    min-width: calc(100% - 60px);
   }
 }
 
 @media screen and (max-width: 550px) {
   .search-form {
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+
+    background-color: #202020;
   }
-}
+} 
