--- a/src/components/SignIn/sign-in-page.css
+++ b/src/components/SignIn/sign-in-page.css
@@ -7,6 +7,9 @@
 
 @media screen and (max-width: 450px) {
   .sign-in-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 350px;
   }
 }
