исправлена шкала пяти недель

--- a/src/components/Main/AboutProject/__scale-big-part/about-project__scale-big-part.css
+++ b/src/components/Main/AboutProject/__scale-big-part/about-project__scale-big-part.css
@@ -10,3 +10,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 400px) {
+  .about-project__scale-big-part {
+    grid-column-end: 4;
+  }
+}
