--- a/src/components/Main/AboutProject/__scale-container/about-project__scale-container.css
+++ b/src/components/Main/AboutProject/__scale-container/about-project__scale-container.css
@@ -6,3 +6,9 @@
   margin-top: 110px;
   margin-bottom: 110px;
 }
+
+@media screen and (max-width: 400px) {
+  .about-project__scale-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
