--- a/src/components/MenuPopup/__close-button/menu-popup__close-button.css
+++ b/src/components/MenuPopup/__close-button/menu-popup__close-button.css
@@ -3,7 +3,7 @@
   height: 22px;
 
   background-color: #fff;
-  background: center no-repeat url(../../../images/close-button.svg);
+  background: center no-repeat url(../../../images/white-cross.svg);
 
   border: none;
 
