--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -1,4 +1,5 @@
 @import url(./__borderline/profile__borderline.css);
+@import url(./__caution/profile__caution.css);
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__exit-button/profile__exit-button.css);
 @import url(./__fieldset/profile__fieldset.css);
