--- a/src/components/AuthForm/__submit/auth-form__submit.css
+++ b/src/components/AuthForm/__submit/auth-form__submit.css
@@ -11,4 +11,17 @@
   margin-top: 176px;
 
   height: 45px;
+
+  transition: .3s;
+}
+
+.auth-form__submit:hover {
+  cursor: pointer;
+  background-color: #2BE080;
+  transition: .3s;
+}
+
+.auth-form__submit:disabled {
+  background-color: grey;
+  cursor: default;
 }
