--- a/src/components/AuthForm/auth-form.css
+++ b/src/components/AuthForm/auth-form.css
@@ -1,3 +1,4 @@
+@import url(./__caution/auth-form__caution.css);
 @import url(./__fieldset/auth-form__fieldset.css);
 @import url(./__input/auth-form__input.css);
 @import url(./__label/auth-form__label.css);
